# pion

./: Cargo.toml  justfile  readme.md
crates/pion/: Cargo.toml
crates/pion-cli/: Cargo.toml
crates/pion-cli/src/: main.rs
crates/pion-cli/tests/: integration_tests.rs
crates/pion-core/: Cargo.toml
crates/pion-core/src/: dump.rs  elab.rs  env.rs  lib.rs  nameres.rs  pretty.rs  prim.rs  print.rs  semantics.rs  symbol.rs  syntax.rs
crates/pion-core/src/elab/: dependencies.rs  diagnostics.rs  expr.rs  module.rs  pat.rs  unify.rs
crates/pion-core/src/semantics/: cek.rs  convertible.rs  elim.rs  eval.rs  quote.rs
crates/pion-core/src/syntax/: iterators.rs
crates/pion-elab/: Cargo.toml
crates/pion-elab/src/: env.rs  lib.rs  unify.rs
crates/pion-elab/src/elab/: expr.rs  lit.rs  match.rs  mod.rs  pat.rs  stmt.rs
crates/pion-elab/src/elab/match/: compile.rs  constructors.rs  decompose.rs  matrix.rs
crates/pion-hir/: Cargo.toml
crates/pion-hir/src/: lower.rs  syntax.rs
crates/pion-hir/src/lower/: diagnostics.rs
crates/pion-hir/src/syntax/: walk.rs
crates/pion-interner/: Cargo.toml
crates/pion-interner/src/: lib.rs
crates/pion-language-server/src/: diagnostics.rs  handlers.rs
crates/pion-language-server/src/handlers/: document_symbols.rs
crates/pion-lexer/: Cargo.toml
crates/pion-lexer/src/: lex.rs  lex_threaded.rs  lib.rs  tests.rs  token.rs
crates/pion-parser/: Cargo.toml
crates/pion-parser/src/: lib.rs  parser.rs  syntax.rs  tree.rs
crates/pion-surface/: Cargo.toml
crates/pion-surface/benches/: lex.rs  parse.rs
crates/pion-surface/src/: grammar.rs  lex.rs  lexer.rs  lib.rs  parse.rs  parser.rs  print.rs  reporting.rs  syntax.rs  tests.rs
crates/pion-surface/src/lex/: tests.rs
crates/pion-surface/src/parse/: grammar.rs  tests.rs
crates/pion-surface/src/parser/: grammar.rs
crates/pion-utils/src/: lib.rs  symbol.rs
crates/pion/src/: check.rs
docs/: bibliography.md
docs/specification/: context-free-syntax.md  lexical-syntax.md
editors/code/syntaxes/: pion.tmLanguage.json
fuzz/: Cargo.toml
fuzz/src/: elab.rs  lexer.rs  parser.rs
test-data/elab/do/: check.pion  check.snapshot  synth.pion  synth.snapshot
test-data/elab/fun-app/: beta-reduce.pion  beta-reduce.snapshot  callee-not-fun.pion  callee-not-fun.snapshot  check-args.pion  check-args.snapshot  plicity-match.pion  plicity-match.snapshot  plicity-mismatch.pion  plicity-mismatch.snapshot  too-many-args.pion  too-many-args.snapshot
test-data/elab/fun-expr/: check.pion  check.snapshot  not-enough-params.pion  not-enough-params.snapshot  plicity-mismatch.pion  plicity-mismatch.snapshot  synth.pion  synth.snapshot  too-many-params.pion  too-many-params.snapshot
test-data/elab/fun-type/: dependent-arrow.pion  dependent-arrow.snapshot  fun-arrow.pion  fun-arrow.snapshot
test-data/elab/if/: branches-mismatch.pion  branches-mismatch.snapshot  check.pion  check.snapshot  eval.pion  eval.snapshot  synth-motive.pion  synth-motive.snapshot  synth.snapshot
test-data/elab/implicit-arg/: fill-implicit-args.pion  fill-implicit-args.snapshot  generalize.pion  generalize.snapshot  implicit-forall.pion  implicit-forall.snapshot  implicit-fun.pion  implicit-fun.snapshot  specialize.pion  specialize.snapshot  unify-plicity-mismatch.pion  unify-plicity-mismatch.snapshot
test-data/elab/let/: check.pion  check.snapshot  synth.pion  synth.snapshot
test-data/elab/literal/: bool.snapshot  char.pion  char.snapshot  int.pion  int.snapshot  string.pion  string.snapshot
test-data/elab/local-var/: unbound-var.pion  unbound-var.snapshot
test-data/elab/match/: bool.pion  bool.snapshot  bool_pairs.pion  bool_pairs.snapshot  inexhaustive.pion  inexhaustive.snapshot  int.pion  int.snapshot  int_pairs.pion  int_pairs.snapshot  records.pion  records.snapshot  unreachable.pion  unreachable.snapshot
test-data/elab/prim-var/: arithmetic.pion  arithmetic.snapshot  equality.pion  equality.snapshot  fixpoint.pion  fixpoint.snapshot  types.pion  types.snapshot
test-data/elab/record-literal/: check-mismatch.pion  check-mismatch.snapshot  check.pion  check.snapshot  duplicate-fields.pion  duplicate-fields.snapshot  synth.pion  synth.snapshot
test-data/elab/record-pat/: check-fun.pion  check-fun.snapshot  forall.pion  forall.snapshot  let.pion  let.snapshot  match.pion  match.snapshot  synth-fun.pion  synth-fun.snapshot
test-data/elab/record-proj/: dependent.pion  dependent.snapshot  field-not-found.pion  field-not-found.snapshot  not-record.pion  not-record.snapshot  synth.pion  synth.snapshot
test-data/elab/record-type/: check.pion  check.snapshot  duplicate-fields.pion  duplicate-fields.snapshot  synth.pion  synth.snapshot
test-data/elab/unification/: escaping-local.pion  escaping-local.snapshot  infinite-solution.pion  infinite-solution.snapshot  non-linear-spine.pion  non-linear-spine.snapshot
tests/elab/ok/: keywords.pion  keywords.snapshot
tests/elab/ok/letrec/: check_letrec.pion  check_letrec.snapshot
tests/elab/ok/match/dependent/: bools.pion
tests/elab/ok/match/or_patterns/: coverage.pion  coverage.snapshot
tests/elab/ok/modules/: item_var.pion  item_var.snapshot
tests/elab/ok/prims/: dependent-matching.pion  dependent-matching.snapshot
