[workspace]
members  = ["crates/*", "fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints]
rust.unused_qualifications = { level = "warn", priority = 100 }
rustdoc.all                = { level = "warn", priority = 100 }

clippy.all      = { level = "warn", priority = 0 }
clippy.nursery  = { level = "warn", priority = 0 }
clippy.pedantic = { level = "warn", priority = 0 }

clippy.allow_attributes_without_reason = { level = "deny", priority = 100 }
clippy.as_conversions                  = { level = "deny", priority = 100 }
clippy.cast_possible_truncation        = { level = "deny", priority = 100 }
clippy.undocumented_unsafe_blocks      = { level = "deny", priority = 100 }

clippy.items_after_statements  = { level = "allow", priority = 100 }
clippy.match_bool              = { level = "allow", priority = 100 }
clippy.missing_const_for_fn    = { level = "allow", priority = 100 }
clippy.missing_errors_doc      = { level = "allow", priority = 100 }
clippy.missing_panics_doc      = { level = "allow", priority = 100 }
clippy.module_name_repetitions = { level = "allow", priority = 100 }
clippy.must_use_candidate      = { level = "allow", priority = 100 }
clippy.option_if_let_else      = { level = "allow", priority = 100 }
clippy.single_match_else       = { level = "allow", priority = 100 }
clippy.too_many_lines          = { level = "allow", priority = 100 }
clippy.wildcard_imports        = { level = "allow", priority = 100 }

[workspace.dependencies]
pion-core    = { path = "crates/pion-core" }
pion-elab    = { path = "crates/pion-elab" }
pion-surface = { path = "crates/pion-surface" }

bumpalo            = { version = "3.16.0", features = ["allocator_api"] }
camino             = { version = "1.1.9" }
clap               = { version = "4.5.20", features = ["derive"] }
codespan-reporting = { version = "0.11.1" }
criterion          = { version = "0.3" }
ecow               = { version = "0.2.2" }
expect-test        = { version = "1.5.0" }
fxhash             = { version = "0.2.1" }
internal-iterator  = { version = "0.2.3" }
libfuzzer-sys      = { version = "0.4" }
libtest-mimic      = { version = "0.7.3" }
similar-asserts    = { version = "1.6.0" }
smallvec           = { version = "1.13.2", features = ["union"] }
text-size          = { version = "1.1.1" }
walkdir            = { version = "2.5.0" }

[profile.release]
opt-level = 3

panic = "abort"
strip = "debuginfo"

codegen-units = 1
incremental   = false

lto = "thin"
