[package]
name    = "pion-fuzz"
publish = false

edition = { workspace = true }
version = { workspace = true }

[package.metadata]
cargo-fuzz = true

[dependencies]
bumpalo       = { workspace = true }
libfuzzer-sys = { workspace = true }
pion-lexer    = { workspace = true }
pion-parser   = { workspace = true }

[[bin]]
name = "lexer"
path = "src/lexer.rs"

bench = false
doc   = false
test  = false

[[bin]]
name = "parser"
path = "src/parser.rs"

bench = false
doc   = false
test  = false
