[package]
name    = "pion-fuzz"
publish = false

edition = { workspace = true }
version = { workspace = true }

[package.metadata]
cargo-fuzz = true

[dependencies]
bumpalo       = { workspace = true }
libfuzzer-sys = { workspace = true }
pion-core     = { workspace = true }
pion-elab     = { workspace = true }
pion-surface  = { workspace = true }

[[bin]]
name = "lexer"
path = "src/lexer.rs"

bench = false
doc   = false
test  = false

[[bin]]
name = "parser"
path = "src/parser.rs"

bench = false
doc   = false
test  = false

[[bin]]
name = "elab"
path = "src/elab.rs"

bench = false
doc   = false
test  = false
