[package]
name = "pion-cli"

edition.workspace = true
version.workspace = true

default-run = "pion-cli"

[lints]
workspace = true

[dependencies]
bumpalo            = { workspace = true }
camino             = { workspace = true }
clap               = { workspace = true }
codespan-reporting = { workspace = true }
pion-lexer         = { workspace = true }
pion-parser        = { workspace = true }
