[package]
name = "pion-cli"

edition.workspace = true
version.workspace = true

default-run = "pion-cli"

[lints]
workspace = true

[dependencies]
bumpalo            = { workspace = true }
camino             = { workspace = true }
clap               = { workspace = true }
codespan-reporting = { workspace = true }
pion-core          = { workspace = true }
pion-elab          = { workspace = true }
pion-surface       = { workspace = true }

[dev-dependencies]
libtest-mimic   = { workspace = true }
similar-asserts = { workspace = true }
walkdir         = { workspace = true }

[[test]]
harness = false
name    = "integration_tests"
