[package]
name = "pion-core"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo = { workspace = true }
ecow    = { workspace = true }
fxhash  = { workspace = true }
pretty  = { version = "0.12.3" }

[dev-dependencies]
expect-test = { workspace = true }
