[package]
name = "pion-elab"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo            = { workspace = true }
codespan-reporting = { workspace = true }
internal-iterator  = { workspace = true }
pion-core          = { workspace = true }
pion-surface       = { workspace = true }
smallvec           = { workspace = true }
text-size          = { workspace = true }
