[package]
name = "pion-parser"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo            = { workspace = true }
codespan-reporting = { workspace = true }
pion-lexer         = { workspace = true }
text-size          = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
