[package]
name = "pion-surface"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo            = { workspace = true }
codespan-reporting = { workspace = true }
text-size          = { workspace = true }

[dev-dependencies]
criterion   = { workspace = true }
expect-test = { workspace = true }
walkdir     = { workspace = true }

[[bench]]
harness = false
name    = "lex"
